moved profile pic into the project

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,12 @@
 ---
 import Navigation from "./Navigation.astro";
+import ProfilePicture from "./ProfilePicture.astro";
 ---
 
 <nav>
   <div>
     <a href="/">
-      <img
-        src="https://avatars.githubusercontent.com/u/37616962?v=4"
-        alt="my github avatar"
-      />
+      <ProfilePicture />
       <p>harryssecret</p>
     </a>
   </div>
