--- a/src/components/ProfilePicture.astro
+++ b/src/components/ProfilePicture.astro
@@ -2,3 +2,12 @@
 ---
 
 <img src="./profile-picture.png" alt="my github avatar" />
+
+<style>
+  img {
+    width: 44px;
+    height: 44px;
+    border-radius: 100%;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  }
+</style>
