added footer content

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,5 +2,16 @@
 ---
 
 <footer>
-  <p></p>
+  <p>tous droits réservés, harry, 2023</p>
 </footer>
+
+<style>
+  footer {
+    width: 100%;
+    border-top: solid 3px #000;
+    margin-top: 1rem;
+    padding: 2rem 0;
+    text-align: center;
+    flex-shrink: 0;
+  }
+</style>
