--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,11 +8,22 @@
   padding: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   background-color: var(--primary-color);
   margin: 0 auto;
   max-width: 80ch;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
 }
 
 a {
@@ -28,4 +39,5 @@ h4 {
 
 h1 {
   font-size: 40px;
+  margin-bottom: 16px;
 }
