--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,10 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Header />
-    <h1>{pageTitle}</h1>
+    <div class="content">
+      <h1>{pageTitle}</h1>
+      <slot />
+    </div>
     <Footer />
   </body>
 </html>
