--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,8 +8,9 @@
 
 <style>
   ul {
+    width: 100%;
     list-style: none;
-    display: flex;
-    gap: 34px;
+    display: none;
+    text-align: center;
   }
 </style>
