--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,4 +3,4 @@ import Layout from "@layouts/Layout.astro";
 const pageTitle = "A propos";
 ---
 
-<Layout pageTitle={pageTitle} />
+<Layout pageTitle={pageTitle} showTitle={true} />
