--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import ProfilePicture from "./ProfilePicture.astro";
 <style>
   nav {
     width: 100%;
-    padding: 2em 0;
+    padding: 2rem 1rem;
     display: flex;
     flex-flow: column;
     font-family: "Source Code Pro", monospace;
