fixed profile picture

--- a/src/components/ProfilePicture.astro
+++ b/src/components/ProfilePicture.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<img src="./profile-picture.png" alt="my github avatar" />
+<img src="/profile-picture.png" alt="my github avatar" />
 
 <style>
   img {
